# digital-homestead

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFESTO.md  README.md  ROADMAP.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: agent-feedback.yml
.github/PULL_REQUEST_TEMPLATE/: new-module.md
.github/workflows/: ci.yml  pages-deploy.yml
deploy/: .env.example  docker-compose.dev.yml  docker-compose.yml
deploy/caddy/: Caddyfile
deploy/scripts/: bootstrap.sh  rotate-tokens.sh
docs/: _config.yml  contributing.md  feedback.md  getting-started.md  index.md  modules.md  pr-review-rubric.md  reference-agent.py
gateway/: .env.example  Dockerfile  pyproject.toml
gateway/gateway/: database.py  main.py  settings.py
gateway/gateway/middleware/: auth.py  rate_limit.py
gateway/gateway/models/: agent.py  event.py  pr.py  reputation.py  task.py
gateway/gateway/routers/: auth.py  events.py  health.py  orchestrator.py  prs.py  tasks.py
gateway/gateway/services/: auth_service.py  event_service.py  github_service.py  pr_service.py  task_service.py
gateway/gateway/sse/: broker.py
gateway/tests/: conftest.py  test_auth.py  test_models.py  test_tasks.py
modules/: README.md
modules/docker/: AGENT-lite.md  AGENT.md  (+1 more)
orchestrator/: .env.example  Dockerfile  pyproject.toml
orchestrator/orchestrator/: context_builder.py  cycle.py  gateway_client.py  main.py  settings.py  tool_dispatcher.py  tool_schemas.py
orchestrator/orchestrator/tools/: broadcast.py  create_task.py  flag_agent.py  merge_pr.py  pause.py  review_pr.py  update_roadmap.py
orchestrator/tests/: test_cycle.py
viewer/: index.html  package.json  vite.config.ts
(+113 files in other folders)
