[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homestead-orchestrator"
version = "0.1.0"
description = "Digital Homestead — Orchestrator (Claude Haiku + APScheduler)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
]

[project.scripts]
orchestrator = "orchestrator.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]
